[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Button.gd" type="Script" id=1]
[ext_resource path="res://Art/TileSet.png" type="Texture" id=2]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 521.0
margin_right = 1024.0
margin_bottom = 521.0
mouse_filter = 2
custom_constants/separation = 100
alignment = 1

[node name="Mine" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 312.0

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Mine"]
position = Vector2( 0.235962, -0.235962 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
hframes = 10
vframes = 10
frame = 98
script = ExtResource( 1 )

[node name="Mine" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Mine/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -128.0
margin_right = -128.0
margin_bottom = -128.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Mine/Sprite"]
position = Vector2( 17.3175, -23.2737 )
texture = ExtResource( 2 )
hframes = 10
vframes = 10
frame = 97

[node name="Orb" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 412.0
margin_right = 412.0

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Orb"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
hframes = 10
vframes = 10
frame = 98
script = ExtResource( 1 )

[node name="Orb" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Orb/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -128.0
margin_right = -128.0
margin_bottom = -128.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Orb/Sprite"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
hframes = 10
vframes = 10
frame = 86

[node name="BuildLadder" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 512.0
margin_right = 512.0

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/BuildLadder"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
hframes = 10
vframes = 10
frame = 98
script = ExtResource( 1 )

[node name="Ladder" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/BuildLadder/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -128.0
margin_right = -128.0
margin_bottom = -128.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/BuildLadder/Sprite"]
position = Vector2( 0, 5 )
texture = ExtResource( 2 )
hframes = 10
vframes = 10
frame = 96

[node name="BuildGolem" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 612.0
margin_right = 612.0

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/BuildGolem"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
hframes = 10
vframes = 10
frame = 98
script = ExtResource( 1 )

[node name="Golem" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/BuildGolem/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -128.0
margin_right = -128.0
margin_bottom = -128.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/BuildGolem/Sprite"]
position = Vector2( 0, 10 )
texture = ExtResource( 2 )
hframes = 10
vframes = 10
frame = 78

[node name="Cancel" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 712.0
margin_right = 712.0

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Cancel"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
hframes = 10
vframes = 10
frame = 98
script = ExtResource( 1 )

[node name="Cancel" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Cancel/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -128.0
margin_right = -128.0
margin_bottom = -128.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite4" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Cancel/Sprite"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
hframes = 10
vframes = 10
frame = 88

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 525.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 75 )
mouse_filter = 2

[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/Mine/Sprite/Mine" to="MarginContainer/VBoxContainer/HBoxContainer/Mine/Sprite" method="_on_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/Mine/Sprite/Mine" to="MarginContainer/VBoxContainer/HBoxContainer/Mine/Sprite" method="_on_button_up"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/Mine/Sprite/Mine" to="MarginContainer/VBoxContainer/HBoxContainer/Mine/Sprite" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/Mine/Sprite/Mine" to="MarginContainer/VBoxContainer/HBoxContainer/Mine/Sprite" method="_on_mouse_exited"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/Orb/Sprite/Orb" to="MarginContainer/VBoxContainer/HBoxContainer/Orb/Sprite" method="_on_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/Orb/Sprite/Orb" to="MarginContainer/VBoxContainer/HBoxContainer/Orb/Sprite" method="_on_button_up"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/Orb/Sprite/Orb" to="MarginContainer/VBoxContainer/HBoxContainer/Orb/Sprite" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/Orb/Sprite/Orb" to="MarginContainer/VBoxContainer/HBoxContainer/Orb/Sprite" method="_on_mouse_exited"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/BuildLadder/Sprite/Ladder" to="MarginContainer/VBoxContainer/HBoxContainer/BuildLadder/Sprite" method="_on_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/BuildLadder/Sprite/Ladder" to="MarginContainer/VBoxContainer/HBoxContainer/BuildLadder/Sprite" method="_on_button_up"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/BuildLadder/Sprite/Ladder" to="MarginContainer/VBoxContainer/HBoxContainer/BuildLadder/Sprite" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/BuildLadder/Sprite/Ladder" to="MarginContainer/VBoxContainer/HBoxContainer/BuildLadder/Sprite" method="_on_mouse_exited"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/BuildGolem/Sprite/Golem" to="MarginContainer/VBoxContainer/HBoxContainer/BuildGolem/Sprite" method="_on_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/BuildGolem/Sprite/Golem" to="MarginContainer/VBoxContainer/HBoxContainer/BuildGolem/Sprite" method="_on_button_up"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/BuildGolem/Sprite/Golem" to="MarginContainer/VBoxContainer/HBoxContainer/BuildGolem/Sprite" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/BuildGolem/Sprite/Golem" to="MarginContainer/VBoxContainer/HBoxContainer/BuildGolem/Sprite" method="_on_mouse_exited"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel/Sprite/Cancel" to="MarginContainer/VBoxContainer/HBoxContainer/Cancel/Sprite" method="_on_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel/Sprite/Cancel" to="MarginContainer/VBoxContainer/HBoxContainer/Cancel/Sprite" method="_on_button_up"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel/Sprite/Cancel" to="MarginContainer/VBoxContainer/HBoxContainer/Cancel/Sprite" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel/Sprite/Cancel" to="MarginContainer/VBoxContainer/HBoxContainer/Cancel/Sprite" method="_on_mouse_exited"]
